Findbugs fixes.